# txtify

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/txtify/: __about__.py  __init__.py  cli.py  converter.py
